--- a/src/app.css
+++ b/src/app.css
@@ -16,4 +16,6 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	scroll-behavior: smooth;
 }
