--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 	line-height: 1.5;
 	font-weight: 400;
   
-	color-scheme: light dark;
+	color: black;
 	background-color: #fafafa;
   
 	font-synthesis: none;
@@ -18,4 +18,5 @@
 	-moz-osx-font-smoothing: grayscale;
 
 	scroll-behavior: smooth;
+
 }
